// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders the correct header 1`] = `
<header
  className="site-header mb-3 py-3 border-bottom-blue"
>
  <div
    className="container"
  >
    <div
      className="row align-items-center"
    >
      <div
        className="col-auto justify-content-start"
      >
        <withDeprecatedProps(Hyperlink)
          destination="http://localhost:18010"
        >
          <Hyperlink
            destination="http://localhost:18010"
            externalLinkAlternativeText="Opens in a new window"
            externalLinkTitle="Opens in a new window"
            onClick={[Function]}
            target="_self"
          >
            <a
              href="http://localhost:18010"
              onClick={[Function]}
              target="_self"
            >
              <img
                alt="edX logo"
                height="30"
                src="test-file-stub"
                width="60"
              />
            </a>
          </Hyperlink>
        </withDeprecatedProps(Hyperlink)>
      </div>
      <div
        className="col"
      >
        <Link
          to="/"
        >
          <LinkAnchor
            href="/"
            navigate={[Function]}
          >
            <a
              href="/"
              onClick={[Function]}
            >
              Courses
            </a>
          </LinkAnchor>
        </Link>
      </div>
      <div
        className="col-auto justify-content-end"
      >
        <withDeprecatedProps(Dropdown)>
          <Dropdown>
            <div
              className="dropdown"
            >
              <DropdownButton
                className="btn-light"
              >
                <button
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="dropdown-toggle btn btn-light"
                  id="pgn__dropdown-trigger-0"
                  onClick={[Function]}
                >
                  test-username
                </button>
              </DropdownButton>
              <DropdownMenu
                className="dropdown-menu-right"
              >
                <div
                  aria-hidden={true}
                  aria-labelledby="pgn__dropdown-trigger-0"
                  className="dropdown-menu dropdown-menu-right"
                  onKeyDown={[Function]}
                  role="menu"
                >
                  <DropdownItem
                    className={null}
                    onClick={[Function]}
                    type="button"
                  >
                    <button
                      className="dropdown-item"
                      onClick={[Function]}
                    >
                      Sign Out
                    </button>
                  </DropdownItem>
                </div>
              </DropdownMenu>
            </div>
          </Dropdown>
        </withDeprecatedProps(Dropdown)>
      </div>
    </div>
  </div>
</header>
`;

exports[`Header renders the header correctly when toggling is allowed, and dark mode is on 1`] = `
<header
  className="site-header mb-3 py-3 border-bottom-blue"
>
  <div
    className="container"
  >
    <div
      className="row align-items-center"
    >
      <div
        className="col-auto justify-content-start"
      >
        <withDeprecatedProps(Hyperlink)
          destination="http://localhost:18010"
        >
          <Hyperlink
            destination="http://localhost:18010"
            externalLinkAlternativeText="Opens in a new window"
            externalLinkTitle="Opens in a new window"
            onClick={[Function]}
            target="_self"
          >
            <a
              href="http://localhost:18010"
              onClick={[Function]}
              target="_self"
            >
              <img
                alt="edX logo"
                height="30"
                src="test-file-stub"
                width="60"
              />
            </a>
          </Hyperlink>
        </withDeprecatedProps(Hyperlink)>
      </div>
      <div
        className="col"
      >
        <Link
          to="/"
        >
          <LinkAnchor
            href="/"
            navigate={[Function]}
          >
            <a
              href="/"
              onClick={[Function]}
            >
              Courses
            </a>
          </LinkAnchor>
        </Link>
      </div>
      <div
        className="col-auto justify-content-end"
      >
        <button
          className="btn btn-primary"
          onClick={[Function]}
          type="button"
        >
          Switch to 
          light mode
        </button>
      </div>
      <div
        className="col-auto justify-content-end"
      >
        <withDeprecatedProps(Dropdown)>
          <Dropdown>
            <div
              className="dropdown"
            >
              <DropdownButton
                className="btn-light"
              >
                <button
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="dropdown-toggle btn btn-light"
                  id="pgn__dropdown-trigger-2"
                  onClick={[Function]}
                >
                  test-username
                </button>
              </DropdownButton>
              <DropdownMenu
                className="dropdown-menu-right"
              >
                <div
                  aria-hidden={true}
                  aria-labelledby="pgn__dropdown-trigger-2"
                  className="dropdown-menu dropdown-menu-right"
                  onKeyDown={[Function]}
                  role="menu"
                >
                  <DropdownItem
                    className={null}
                    onClick={[Function]}
                    type="button"
                  >
                    <button
                      className="dropdown-item"
                      onClick={[Function]}
                    >
                      Sign Out
                    </button>
                  </DropdownItem>
                </div>
              </DropdownMenu>
            </div>
          </Dropdown>
        </withDeprecatedProps(Dropdown)>
      </div>
    </div>
  </div>
</header>
`;

exports[`Header renders the header correctly when users pass a querystring param to allow dark mode toggling 1`] = `
<header
  className="site-header mb-3 py-3 border-bottom-blue"
>
  <div
    className="container"
  >
    <div
      className="row align-items-center"
    >
      <div
        className="col-auto justify-content-start"
      >
        <withDeprecatedProps(Hyperlink)
          destination="http://localhost:18010"
        >
          <Hyperlink
            destination="http://localhost:18010"
            externalLinkAlternativeText="Opens in a new window"
            externalLinkTitle="Opens in a new window"
            onClick={[Function]}
            target="_self"
          >
            <a
              href="http://localhost:18010"
              onClick={[Function]}
              target="_self"
            >
              <img
                alt="edX logo"
                height="30"
                src="test-file-stub"
                width="60"
              />
            </a>
          </Hyperlink>
        </withDeprecatedProps(Hyperlink)>
      </div>
      <div
        className="col"
      >
        <Link
          to="/"
        >
          <LinkAnchor
            href="/"
            navigate={[Function]}
          >
            <a
              href="/"
              onClick={[Function]}
            >
              Courses
            </a>
          </LinkAnchor>
        </Link>
      </div>
      <div
        className="col-auto justify-content-end"
      >
        <button
          className="btn btn-primary"
          onClick={[Function]}
          type="button"
        >
          Switch to 
          dark mode
        </button>
      </div>
      <div
        className="col-auto justify-content-end"
      >
        <withDeprecatedProps(Dropdown)>
          <Dropdown>
            <div
              className="dropdown"
            >
              <DropdownButton
                className="btn-light"
              >
                <button
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="dropdown-toggle btn btn-light"
                  id="pgn__dropdown-trigger-1"
                  onClick={[Function]}
                >
                  test-username
                </button>
              </DropdownButton>
              <DropdownMenu
                className="dropdown-menu-right"
              >
                <div
                  aria-hidden={true}
                  aria-labelledby="pgn__dropdown-trigger-1"
                  className="dropdown-menu dropdown-menu-right"
                  onKeyDown={[Function]}
                  role="menu"
                >
                  <DropdownItem
                    className={null}
                    onClick={[Function]}
                    type="button"
                  >
                    <button
                      className="dropdown-item"
                      onClick={[Function]}
                    >
                      Sign Out
                    </button>
                  </DropdownItem>
                </div>
              </DropdownMenu>
            </div>
          </Dropdown>
        </withDeprecatedProps(Dropdown)>
      </div>
    </div>
  </div>
</header>
`;
